<resources>
    <string name="app_name">Tourist Quiz</string>
    <string name="start_button">Play</string>
    <string name="action_settings">Settings</string>
    <string name="version">Version %1$s.%2$d</string>

    <string name="open_level">Open level</string>

    <string name="banner_ad_unit_id">ca-app-pub-4064765395481471/5917751346</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id">1728268640725307</string>

    <string name="quiz_point">157</string>

    <string name="quiz_text">В Какой стране находятся Великие Пирамиды Гизы?</string>
    <string name="quiz_button1">Турция</string>
    <string name="quiz_button2">Египет</string>
    <string name="quiz_button3">Иран</string>
    <string name="quiz_button4">Саудовская Аравия</string>

    <string name="quiz_error">Found a mistake?</string>
    <string name="dialog_error_text">Oops, mistake! Thanks you, we\'ll correct it</string>
    <string name="dialog_error_comment">Your comment</string>
    <string name="dialog_error_send">Send</string>
    <string name="dialog_error_cancel">Cancel</string>

    <string name="button_my_quiz">My quiz</string>

    <string name="france">France</string>
    <string name="usa">USA</string>
    <string name="spain">Spain</string>
    <string name="china">China</string>
    <string name="italy">Italy</string>
    <string name="turkey">Turkey</string>
    <string name="germany">Germany</string>
    <string name="england">United Kingdom</string>
    <string name="russia">Russia</string>
    <string name="mexico">Mexico</string>
    <string name="thailand">Thailand</string>

    <string name="button_leaderboard">Leader Board</string>

    <string name="leaderboard_place">#</string>
    <string name="leaderboard_name">Name</string>
    <string name="leaderboard_scores">Scores</string>

    <string name="dialog_question_title">Make a question</string>
    <string name="dialog_question_text">Think of a question:</string>
    <string name="dialog_question_answer">Correct answer:</string>

    <string name="dialog_success_title">Success</string>
    <string name="dialog_success_next">Next</string>

    <string name="dialog_fail_title">Failure</string>

    <string name="dialog_level_done_title">Level is passed</string>

    <string name="dialog_enter_name_title">Your name</string>
    <string name="dialog_enter_name_hint">To compare your result with other players you need to introduce yourself. You can login via Facebook or enter you own name (mick)</string>

    <string name="dialog_add_millis_title">Add miles</string>
    <string name="dialog_add_millis_ad">Watch ad video\n+10 miles</string>

    <string name="dialog_buy_ticket_text">To travel you need to buy a ticket. To buy for %1$d miles?</string>

    <string name="country">Country</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="buy">Buy</string>
    <string name="dialog_question_hint_text">Questions should not exceed 130 characters</string>
    <string name="dialog_question_hint_20">Max of 20 characters</string>
    <string name="button_partner_quiz">Partner Quiz</string>
    <string name="show_time_result">  %1$s sec</string>
    <string name="show_plus_and_result">+ %s</string>
    <string name="minus_millis">- 10</string>

    <string name="header_tips">Tips</string>
    <string name="header_leaderboard">Leader Board</string>
    <string name="toast_plus_millis">+10 miles</string>
    <string name="load_ad">Loading...</string>
    <string name="or">OR</string>

    <string name="no_connection">No connection to Internet =(</string>

    <string name="level_text">Impressive</string>
    <string name="reset_game">Reset</string>

    <string-array name="countries">
        <item>@string/france</item>
        <item>@string/usa</item>
        <item>@string/spain</item>
        <item>@string/china</item>
        <item>@string/italy</item>
        <item>@string/turkey</item>
        <item>@string/germany</item>
        <item>@string/england</item>
        <item>@string/russia</item>
        <item>@string/mexico</item>
        <item>@string/thailand</item>
    </string-array>

    <string-array name="cost_array">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>350</item>
        <item>400</item>
        <item>450</item>
        <item>500</item>
        <item>550</item>
        <item>600</item>
        <item>650</item>
        <item>700</item>
    </string-array>

    <string-array name="tips">
        <item>Для начала в игре Туристическая Викторина нажмите кнопку Старт и выберете доступные уровни</item>
        <item>Для прохождения новых уровней необходимо купить билет в страну на зарботанные мили</item>
        <item>Мили можно зарабатывать отвечая на вопросы</item>
        <item>Отправля свой вопрос, ты зарабатываешь дополнительные мили</item>
        <item>Заработать мили можно также посмотрев рекламный ролик</item>
        <item>Для получения лучшего результата на вопрос отвечайте с первой попытки, а не с лучшим временем</item>
        <item>Сравнить свой результат с другими игроками можно в Таблице лидеров</item>
        <item>Заработанные мили трать на покупку билетов другие страны</item>
        <item>Твои достижения храняться в разделе Достижения</item>
    </string-array>

    <string-array name="achievements">
        <item>5 правильных ответов подряд\nОчки на два!</item>
        <item>10 правильных ответов подряд\nОчки на три!</item>
        <item>Новичек\nПройти 1 уровень</item>
        <item>Курортник\nПройти 5 уровней</item>
        <item>Горнолыжник\nПройти 10 уроней</item>
        <item>Экскурсионный туризм\nПройти 20 уровней</item>
        <item>Бывалый турист\nПройти 30 уровней</item>
    </string-array>
</resources>
