<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/dialog_question_title"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@color/highlighted_text_material_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/dialog_question_text"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_question_text"
        android:singleLine="false"
        android:lines="6"
        android:layout_margin="4dp"
        android:cursorVisible="true"
        android:maxLength="130"
        android:hint="@string/dialog_question_hint_text"
        android:background="@android:color/white"
        android:inputType="text|textAutoComplete|textMultiLine"
        android:gravity="top|start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/dialog_question_answer"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_question_answers"
        android:singleLine="true"
        android:maxLength="20"
        android:hint="@string/dialog_question_hint_20"
        android:layout_margin="4dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/country"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_question_country"
        android:singleLine="true"
        android:maxLength="20"
        android:hint="@string/dialog_question_hint_20"
        android:layout_margin="4dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_send"
            android:text="@string/send"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>