<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/transparent"
    android:id="@+id/quiz_layout">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/quiz_point"
        android:id="@+id/score_text"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="128dp"
        android:paddingBottom="128dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quiz_text"
        android:id="@+id/quiz_text"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/top_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_button"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/button1"
            android:text="@string/quiz_button1"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button2"
            android:text="@string/quiz_button2"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/error_text"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button4"
            android:text="@string/quiz_button4"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button3"
            android:text="@string/quiz_button3"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <TextView

        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/quiz_error"
        android:id="@+id/error_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>