<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/dialog_add_millis_title"
        android:textSize="20sp"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:background="@color/success_title"
        android:layout_width="270dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dialog_show_ad"
        android:text="@string/dialog_add_millis_ad"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <Button
        android:id="@+id/button_cancel"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>